Fix field error alignment

--- a/screen.css
+++ b/screen.css
@@ -134,24 +134,18 @@ h1 + p {
 label {
     color: var(--marine-blue);
     font-size: 0.75em;
-    line-height: .75em;
-}
-
-.error {
-    color: var(--strawberry-red);
+    display: flex;
+    justify-content: space-between;
 }
 
 .error strong {
-    font-weight: 400;
+    font-weight: 700;
     float: right;
     vertical-align: middle;
-}
-
-.error input::placeholder {
     color: var(--strawberry-red);
 }
 
-.error input {
+.error + input {
     border-color: var(--strawberry-red);
 }
 
@@ -188,7 +182,7 @@ footer a {
 }
 
 footer button {
-    height: 48px;
+    height: 3rem;
     background: var(--marine-blue);
     border-radius: .25rem;
     padding: 0.75rem 1rem;
@@ -266,6 +260,7 @@ footer button {
 
     input {
         font-size: 1rem;
+        margin-top: 0.5em;
     }
 
     h1 {
@@ -275,5 +270,9 @@ footer button {
     footer {
         grid-column-start: 2;
         grid-column-end: 4;
+    }
+
+    footer button {
+        border-radius: 0.5em;
     }
 }
